--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@ Project Name: JavaJam Website (HW14)
 Author: Alyssa Garcia
 Date Last Modified: April 4 2019
 GibHub User: amgarcia112
+
+wrapper not set correctly!
+some formatting issues
 -->
 	<title>JavaJam Coffee House</title>
 	<meta charset="utf-8">
